Edited and renamed notebook

--- a/Detecting_Insecure_Code.ipynb
+++ b/Detecting_Insecure_Code.ipynb
@@ -5,53 +5,18 @@
    "id": "0af52b6c",
    "metadata": {},
    "source": [
-    "# Find and Fix Insecure Code Using LLMs\n",
+    "# Detecting Insecure Code with LLMs\n",
+    "## Prompt Experiments for Python Vulnerability Detection\n",
     "\n",
-    "## Introduction\n",
-    "\n",
-    "This notebook presents a short review of some recent findings in vulnerability detection and repair with LLMs and then dives into some experiments assessing an LLM's ability to identify insecure code in a Python dataset using a variety of prompting techniques. If you want to skip ahead and test your own code, just run the first cell of imports and then go to the [Secure Code Assistant](#secure-code-assistant) section to predict CWEs in your own code sample.\n",
-    "\n",
-    "## Table of Contents\n",
-    "\n",
-    "- [Find and Fix Insecure Code Using LLMs](#find-and-fix-insecure-code-using-llms)\n",
-    "  - [Introduction](#introduction)\n",
-    "  - [Table of Contents](#table-of-contents)\n",
-    "  - [Background](#background)\n",
-    "    - [Common Weakness Enumeration](#common-weakness-enumeration)\n",
-    "    - [Static Code Analysis](#static-code-analysis)\n",
-    "    - [Previous Work](#previous-work)\n",
-    "  - [Dataset](#dataset)\n",
-    "    - [Data Source](#data-source)\n",
-    "    - [How to Recreate](#how-to-recreate)\n",
-    "    - [Data Exploration](#data-exploration)\n",
-    "  - [Prompt Experiments without Labels](#prompt-experiments-without-labels)\n",
-    "    - [Experiment 1: Zero-shot](#experiment-1-zero-shot)\n",
-    "    - [Experiment 2: Zero-shot Step-by-step](#experiment-2-zero-shot-step-by-step)\n",
-    "    - [Experiment 3: Few-shot Step-by-step](#experiment-3-few-shot-step-by-step)\n",
-    "    - [Experiment 4: KNN Few-shot Step-by-step](#experiment-4-knn-few-shot-step-by-step)\n",
-    "    - [Experiment 5: KNN Few-shot Step-by-step with Code Fix](#experiment-5-knn-few-shot-step-by-step-with-code-fix)\n",
-    "  - [Prompt Experiments with Labels](#prompt-experiments-with-labels)\n",
-    "    - [Experiment 6: Zero shot Step-by-step](#experiment-6-zero-shot-step-by-step)\n",
-    "    - [Experiment 7: KNN Few-shot Step-by-step with Code Fix](#experiment-7-knn-few-shot-step-by-step-with-code-fix)\n",
-    "  - [Results](#results)\n",
-    "  - [Secure Code Assistant](#secure-code-assistant)\n",
-    "  - [Citations](#citations)"
+    "This notebook performs experiments assessing an LLM's ability to identify insecure code in a Python dataset using a variety of prompting techniques. If you want to skip ahead and test your own code, just run the first cell of imports and then go to the [Secure Code Assistant](#secure-code-assistant) section to predict CWEs in your own code sample."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "85fac7c9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using dataset directory: /Users/mbuehle/notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "import matplotlib as plt\n",
@@ -71,49 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f46c88bb",
-   "metadata": {},
-   "source": [
-    "## Background"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "debe0112",
-   "metadata": {},
-   "source": [
-    "### Common Weakness Enumeration\n",
-    "Since 2006, the government-funded research organization MITRE has been publishing the Common Weakness Enumeration (CWE), which is a community-developed list of software and hardware weakness types serving as a common taxonomy weakness definitions and descriptions. In this context, a \"weakness\" is a condition in software or hardware that can in some scenarios lead to vulnerabilities. A list of [2023 CWE Top 25 Most Dangerous Software Weaknesses](https://cwe.mitre.org/data/definitions/1425.html) highlights repeat offending weaknesses.\n",
-    "\n",
-    "The 15 “Stubborn” Weaknesses is another list of CWEs that have been present on every Top 25 list from 2019-2023.\n",
-    "They fall into a rough taxonomy:\n",
-    "* <b>Group 1</b>: Weak handling of untrusted data sources (e.g. Command/SQL Injection, Path Traversal, Improper Input Validation, and Cross-site Scripting)\n",
-    "* <b>Group 2</b>: Weak memory management or type enforcement (e.g. NULL Pointer Dereference)\n",
-    "* <b>Group 3</b>: Weak security design choices (e.g. Hard-coded Credentials)\n",
-    "Some sources suggest that Group 1 CWEs are the most prevalent and dangerous kind for Python applications.\n",
-    "\n",
-    "### Static Code Analysis\n",
-    "Static analysis tools such as CodeQL, Bandit, SonarQube, and Coverity, are helpful for detecting insecure code. They work by parsing the source code into an abstract syntax tree or control flow graph that represents how the code is organized and how the components (classes, functions, variables, etc.) all relate to each other. Rule-based analysis and pattern matching are then employed to scan the code for a wide range of issues. Static analysis tools can be integrated with IDEs and CICD systems throughout the development cycle, and many offer custom configuration, querying, and reporting options. However, they have drawbacks:\n",
-    "* <b>Resource-Intensive</b>: They convert sometimes large code bases into a database and run complex queries\n",
-    "* <b>False Positives and Negatives</b>: They often miss real issues and flag issues that are not actual problems\n",
-    "* <b>Time-Intensive Follow-up</b>: They require significant effort from the development team to triage, validate, and repair findings\n",
-    "\n",
-    "### Recent Work on Vulnerability Detection with LLMs\n",
-    "Recent work has demonstrated the potential of LLMs across various stages of the development life cycle. They have been shown to be useful for secure code completion, test case generation, vulnerable code detection, malicious code detection, and bug fixing. Here are a few papers of note:\n",
-    "1. This [comprehensive evaluation](https://arxiv.org/abs/2308.10345) compared LLMs of different parameter sizes with traditional static analyzers in identifying and correcting software vulnerabilities. GPT4 in particular was found to be very capable, especially in light of its ability to explain and fix vulnerable code. THe paper suggests the following:\n",
-    "    * Significant code understanding seems to emerge between 6 to 175 billion parameters, with the first hint of advanced programmer skills appearing beyond 13 billion parameters\n",
-    "    * Prediction success may be boosted when prompts combine the tasks of identify and fixing security issues together\n",
-    "    * LLMs combined with traditional static code analysis may offer the best path to more secure and robust systems\n",
-    "2. This [novel study and dataset](https://arxiv.org/abs/2108.09293) found that GitHub Copilot is susceptible to writing insecure code and discovered that 40% of code completions generated by the LLM contained CWEs. \n",
-    "3. This [investigation](https://betterprogramming.pub/i-used-gpt-3-to-find-213-security-vulnerabilities-in-a-single-codebase-cc3870ba9411) reported that GPT3 outperformed the static code analyzer Snyk in predicting security vulnerabilities.\n",
-    "4. This [research paper](https://arxiv.org/abs/2308.14434) also showed that LLMs can assist developers in identifying and localizing vulnerable code, particularly when combined with static analyzers.\n",
-    "5. In [another study](https://arxiv.org/abs/2112.02125) LLMs successfully fixed all synthetic and hand-crafted scenarios, although they did not adequately address all real-world security bug scenarios.\n",
-    "\n",
-    "While LLMs have shown promise in outperforming traditional approaches, many of these works point out that they are also susceptible to false positives and sensitive to the structure and wording of prompts. In our experiments, we aim to validate and build upon these prior works by applying more variations to the prompt template."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6d060949",
    "metadata": {},
    "source": [
@@ -125,29 +47,11 @@
    "id": "ef68e415",
    "metadata": {},
    "source": [
-    "### Data Source\n",
-    "We will draw from one of the most widely-adopted datasets for secure code benchmarking of LLMs. The dataset from the \"Asleep at the Keyboard\" paper is made up of prompts (called \"scenarios\") that were hand-designed to elicit certain CWEs when used as input to a code-generating LLM. Instead of using the prompts, however, we have mined the output code completions that were published with the paper, since they were subsequently scanned by a static code analyzer and come with labels of \"Vulnerable\" and \"Not Vulnerable\". It should be noted, again, that the code in this dataset is model-generated from manually written prompts, so it lacks some real-world gravitas, but we chose it for a few reasons:\n",
-    "1. It has a large number of Python language examples, which we have chosen as our language of interest\n",
-    "2. It has both vulnerable and non-vulnerable code snippets (important for assessing false positives and negatives)\n",
-    "3. Related to (2), the fact that there are vulnerable and non-vulnerable code snippets <i>for the same scenario</i> meant that we could use the non-vulnerable completions as \"suggested fixes\" in some of our prompt templates, which will be explained in the experiments sections.\n",
+    "### Data Source & Preprocessing\n",
+    "We will use one of the most widely-adopted datasets for secure code benchmarking of LLMs. The dataset from [Asleep at the Keyboard? Assessing the Security of GitHub Copilot's Code Contributions](https://arxiv.org/abs/2108.09293) is made up of prompts (called \"scenarios\") that were hand-designed to elicit certain CWEs when used as input to a code-generating LLM. We have mined the output code completions that were published with the paper, since they were subsequently scanned by a static code analyzer and come with labels of \"Vulnerable\" and \"Not Vulnerable\". Refer to this repo's README and data preprocessing script for more details.\n",
     "\n",
-    "We understand that there are other datasets we could have used and it is left for further research to explore CWE prediction capability with other datasets.\n",
-    "\n",
-    "### How to Recreate\n",
-    "Along with this notebook, we release a data processing script that extracts the Python code snippets from Pearce et. al's [Copilot Scenario raw data files](https://doi.org/10.5281/zenodo.5225650). You may download the script from our GitHub repository along with instructions for setting up an environment and running it. The steps taken by the preprocessing script are:\n",
-    "1. Open the project's aggregated \"diversity of weakness\" results file\n",
-    "2. Filter for Python language rows\n",
-    "3. For each Python scenario/row, navigate to the scenario's dedicated results folder\n",
-    "4. Open the scenario's CodeQL or authors' manual assessment file (which file is present depends on how the scenario was scored)\n",
-    "5. For each generated code completion for the scenario:\n",
-    "    * Create a record containing its metadata and scored classification label\n",
-    "    * Read in the `.py` file containing the code completion and remove any lines that are 100% comments\n",
-    "    * Insert the cleaned code into the record\n",
-    "6. Test that the rows for our dataset agree with the totals in the original aggregated results file\n",
-    "7. Save the final file in JSON format\n",
-    "\n",
-    "### Data Exploration and Subsetting\n",
-    "Explore the distribution of CWEs and selected a sample of size 45 spread evenly over vulnerable and non-vulnerable codes from the Group 1 CWEs (we targeted 50, but were limited by the number available in one group). The CWE desciptions are:\n",
+    "### Data Exploration & Subsetting\n",
+    "Explore the distribution of CWEs and select a small sample spread evenly over vulnerable and non-vulnerable codes from the following CWEs:\n",
     "* CWE-20: Improper Input Validation\n",
     "* CWE-22: Improper Limitation of a Pathname to a Restricted Directory ('Path Traversal')\n",
     "* CWE-78: Improper Neutralization of Special Elements used in an OS Command ('OS Command Injection')\n",
@@ -529,7 +433,7 @@
     }
    ],
    "source": [
-    "# Let's get a small balanced sample from \"Group 1\" CWEs\n",
+    "# Let's get a small balanced sample from the desired set of CWEs\n",
     "seed = 0\n",
     "target_num = 50  # The actual size could be less\n",
     "cwe_list = ['CWE-20', 'CWE-22', 'CWE-78', 'CWE-79', 'CWE-89', 'CWE-502']\n",
@@ -564,7 +468,7 @@
    "metadata": {},
    "source": [
     "### Experiment 1: Zero-shot\n",
-    "In a zero-shot prompt, we ask the model to make a prediction with no example or information other than instructions. Our zero-shot template was inspired by Bakhshandeh et. al and includes a role, code delimiter, and detailed json formatting request. We will build more layers on top of this foundational template throughout the rest of the notebook and compare how the variations affect the results.\n",
+    "In a zero-shot prompt, we ask the model to make a prediction with no example or information other than instructions. Our zero-shot template was inspired by [this paper](https://arxiv.org/abs/2308.14434) and includes a role, code delimiter, and detailed json formatting request. We will build more layers on top of this foundational template throughout the rest of the notebook and compare how the variations affect the results.\n",
     "\n",
     "We have set up classes and helper functions to organize the prompts. You can view the code in `prompt_utils.py` or just print out a prompt template."
    ]
@@ -759,7 +663,7 @@
    "metadata": {},
    "source": [
     "### Experiment 2: Zero-shot Step-by-step\n",
-    "In this experiment, we add the \"step-by-step\" strategy, described in this [paper](https://arxiv.org/abs/2205.11916). There are more complex ways to build a chain-of-thought prompt, but this one is actually as simple as just asking the model to \"think step-by-step\"."
+    "In this experiment, we add the \"step-by-step\" strategy, described in [this paper](https://arxiv.org/abs/2205.11916). There are more complex ways to build a chain-of-thought prompt, but this one is actually as simple as just asking the model to \"think step-by-step\"."
    ]
   },
   {
@@ -783,7 +687,7 @@
       "\n",
       "Format your response as a JSON object with ”label” as the key \n",
       "for vulnerability status and \"cwe\" as the vulnerability number found. \n",
-      "Think about the answer step by step, but only answer with JSON.\n"
+      "Think about the answer step by step, and only answer with JSON.\n"
      ]
     }
    ],
@@ -927,7 +831,7 @@
       "If the code does not contain any vulnerabilities, write Not Vulnerable. \n",
       "Format your response as a JSON object with \"label\" as the key \n",
       "for vulnerability status and \"cwe\" as the vulnerability number found. \n",
-      "Think about the answer step by step, but only answer with JSON.\n",
+      "Think about the answer step by step, and only answer with JSON.\n",
       "\n",
       "Python code: ```{example_0}```\n",
       "\n",
@@ -1085,7 +989,7 @@
    "metadata": {},
    "source": [
     "### Experiment 4: KNN Few-shot Step-by-step\n",
-    "This [blog post about Medprompt](https://www.microsoft.com/en-us/research/blog/the-power-of-prompting/) describes an interesting technique called KNN-based few-shot example selection that led to a notable boost in performance. For this next experiment, instead of sampling shots at random, we calculated a similarity score between each candidate example and the input code and constructed shots from the most similar candidates (but still kept the scenarios distinct). We are using the RougeL fmeasure metric, but other metrics could be used too."
+    "[This paper](https://arxiv.org/abs/2311.16452) describes an interesting technique called KNN-based few-shot example selection that led to a notable boost in performance. For this next experiment, instead of sampling shots at random, we calculated a similarity score between each candidate example and the input code and constructed shots from the most similar candidates (but still kept the scenarios distinct). We are using the RougeL fmeasure metric, but other metrics could be used too."
    ]
   },
   {
@@ -1263,7 +1167,7 @@
       "If the code has the vulnerability, write a repaired secure version of the code that preserves its exact functionality. \n",
       "Format your response as a JSON object with \"label\" as the key \n",
       "for vulnerability status, \"cwe\" as the vulnerability found, and \"fix\" for the fixed code snippet. \n",
-      "Think about the answer step by step, but only answer with JSON.\n",
+      "Think about the answer step by step, and only answer with JSON.\n",
       "\n",
       "Python code: ```{example_0}```\n",
       "\n",
@@ -2037,7 +1941,7 @@
    "id": "787d3706",
    "metadata": {},
    "source": [
-    "# Results"
+    "## Results"
    ]
   },
   {
@@ -2066,7 +1970,6 @@
     }
    ],
    "source": [
-    "from data_utils import make_chart\n",
     "make_chart(metrics)"
    ]
   },
@@ -2075,7 +1978,14 @@
    "id": "3b8ef40c",
    "metadata": {},
    "source": [
-    "# Secure Code Assistant\n",
+    "## Secure Code Assistant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1293d497",
+   "metadata": {},
+   "source": [
     "To interactively test your own code snippet:\n",
     "1. Execute the next cell\n",
     "2. Paste your code into the \"Code\" box\n",
@@ -2136,6 +2046,13 @@
     "      eprint={2308.10345},\n",
     "      archivePrefix={arXiv},\n",
     "      primaryClass={cs.SE}\n",
+    "}\n",
+    "\n",
+    "@article{nori2023can,\n",
+    "  title={Can generalist foundation models outcompete special-purpose tuning? case study in medicine},\n",
+    "  author={Nori, Harsha and Lee, Yin Tat and Zhang, Sheng and Carignan, Dean and Edgar, Richard and Fusi, Nicolo and King, Nicholas and Larson, Jonathan and Li, Yuanzhi and Liu, Weishung and others},\n",
+    "  journal={arXiv preprint arXiv:2311.16452},\n",
+    "  year={2023}\n",
     "}\n",
     "\n",
     "@misc{pearce2021asleep,\n",
